--- a/templates/index/base.html.twig
+++ b/templates/index/base.html.twig
@@ -59,8 +59,8 @@
                         <li><a href="/services/individual-management">Фондовая торговля</a></li>
                         <li><a href="/services/robotic-trading">Роботизированная торговля</a></li>
                         <li><a href="/services/ipo">Американские первичные акции (IPO)</a></li>
-                        <li><a href="/services/thailand/property-investments">Инвестиции в недвижимость Тайланда</a></li>
-                        <li><a href="/services/cars">Доходные автомобили Тайланда</a></li>
+                        <li><a href="/services/thailand/property-investments">Инвестиции в недвижимость Испании</a></li>
+                        <li><a href="/services/cars">Доходные автомобили Испании</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
