--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -431,7 +431,7 @@
                     </tr>
                     <tr>
                         <th scope="row">4</th>
-                        <td>Инвестиции в недвижимость Тайланда</td>
+                        <td>Инвестиции в недвижимость Испании</td>
                         <td style="color:#335433;" >  15% годовых  </td>
                         <td>
                             <a href="/services/thailand/property-investments">Открыть</a>
@@ -441,7 +441,7 @@
 
                     <tr>
                         <th scope="row">5</th>
-                        <td>Доходные автомобили Тайланда</td>
+                        <td>Доходные автомобили Испании</td>
                         <td style="color:#335433;" > до 50% годовых </td>
                         <td>
                             <a href="/services/cars">Открыть</a>
