--- a/templates/services/individualManagement.html.twig
+++ b/templates/services/individualManagement.html.twig
@@ -71,7 +71,9 @@
                                                 <p> В нашей торговой системе при открытии сделок трейдер в обязательном порядке, всегда выставляет «стоп-лоссы», поэтому потери минимальны, а вероятность заработать значительно выше, благодаря имеющемуся опыту и наличию в команде GBB настоящих профессионалов трейдеров и аналитиков.</p>
                                                 <p> Наш проект выступает партнером брокера ООО «Компания БКС» и помогает Вам открывать счета в системе указанного брокера.</p>
 
-                                                <p>•	Вход на рынок от 100 $ (когда один фьючерсный контракт может превышать эту сумму в несколько раз). Это возможно благодаря созданию пула инвесторов.</p>
+                                                <p>•	Вход на рынок от 15 000 $
+                                                    {#(когда один фьючерсный контракт может превышать эту сумму в несколько раз). Это возможно благодаря созданию пула инвесторов.#}
+                                                </p>
                                                 <p>•	Вам не нужно тратить время на обучение трейдингу и практику</p>
                                                 <p>•	Работа с ликвидными инструментами и российским брокером</p>
                                                 <p>•	Брокер выступает налоговым агентом, поэтому налогообложение Вас не будет касаться</p>
@@ -156,9 +158,17 @@
 
 
                                                 <p> Проект GBB оставляет за собой право удержания комиссии согласно договору и приложению к нему и распределения прибыли в  следующих пропорциях:</p>
-                                                <p> •	При сумме депозита до 10 000$ - комиссия составит 30% от прибыли </p>
-                                                <p> •	При сумме депозита от 10 000$ до 50 000$ - комиссия составиться 20%</p>
-                                                <p> •	При сумме депозита свыше 50 000$ - комиссия составит 10%</p>
+                                                {#<p> •	При сумме депозита до 10 000$ - комиссия составит 30% от прибыли </p>#}
+                                                <p> •	При сумме депозита от 15 000$ до 50 000$ - комиссия составиться 30%</p>
+                                                {#<p> •	При сумме депозита свыше 50 000$ - комиссия составит 10%</p>#}
+
+
+
+                                                <p> •	 При сумме депозита свыше 50 000$  100 000 - комиссия составит 20%</p>
+
+                                                <p> •	 При сумме депозита свыше 100 000$ - комиссия составит 18%</p>
+
+
                                                 <p> При этом, комиссионное вознаграждение должно быть переведено Инвестором на реквизиты компании GBB любым удобным доступным способом с 1 по 5 число каждого месяца, следующего за отчетным месяцем после закрытия успешных сделок. В случае нарушения сроков Инвестор несет ответственность согласно договору.</p>
 
 
