--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -555,7 +555,7 @@
                         <li><a href="/services/individual-management">Фондовая торговля </a></li>
                         {#<li><a href="/services/robotic-trading">Роботизированная торговля</a></li>#}
                         <li><a href="/services/ipo">Американские первичные акции (IPO)</a></li>
-                        <li><a href="/services/thailand/property-investments">Инвестиции в недвижимость Тайланда</a></li>
+                        <li><a href="/services/thailand/property-investments">Инвестиции в недвижимость Испании</a></li>
                         {#<li><a href="/services/cars">Доходные автомобили Тайланда</a></li>#}
                     </ul><!--end /submenu -->
                 </li><!--end /menu-li -->
