--- a/templates/services/thailandPropertyInvestments.html.twig
+++ b/templates/services/thailandPropertyInvestments.html.twig
@@ -56,7 +56,7 @@
                                     <div class="col-sm-3">
                                         <div class="card-body">
                                             <div class="hidden-xs">
-                                                <center><h3 class="text-light"><strong>Тайланд</strong>  </h3></center>
+                                                <center><h3 class="text-light"><strong>Испания</strong>  </h3></center>
                                                 {#<a href="#">2 comments <i class="fa fa-comment-o"></i></a>#}
                                                 <div class="stick-top-right">
                                                     {#<a class="btn btn-icon-toggle" data-toggle="tooltip" data-placement="top" data-original-title="Contact me"><i class="fa fa-envelope"></i></a><br/>#}
@@ -66,7 +66,7 @@
                                             </div>
                                             <div class="visible-xs">
                                                 <center>
-                                                    <a href="#">Тайланд </a>
+                                                    <a href="#">Испания </a>
                                                 </center>
                                             </div>
                                         </div>
