--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -314,7 +314,7 @@
 
 
                 <div class="alert alert-callout alert-info">
-                    Все средства по всем портфелям в обороте и свободные средства c учетом прибыли: <b> {{ balanceAll.balanceAll  }} </b> USD
+                    Все средства по всем портфелям в обороте и свободные средства c учетом прибыли: <b> {{ balanceAll   }} </b> USD
                     <br />
                     <span class="badge style-danger"  style="  padding-bottom: 5px; background-color: #335f29;">   <i class="md md-account-balance-wallet"></i>   Доход за все время   {{ profitSummAll }}   USD </span>
                     <br />
