--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -8,8 +8,6 @@
             <div class="row">
 
 
-
-
                 <!-- BEGIN BUTTON -->
                 <div class="col-md-3">
                     <div class="card">
@@ -23,9 +21,6 @@
                     </div><!--end .card -->
                 </div><!--end .col -->
                 <!-- END BUTTON -->
-
-
-
 
                 <!-- BEGIN BUTTON -->
                 <div class="col-md-3">
@@ -123,10 +118,6 @@
 
             </div><!--end .row -->
 
-
-
-
-
            <!-- begin Оплатить вступительный взнос -->
             {% if user is defined %}
             {% if user.isresident == 0 %}
@@ -139,10 +130,6 @@
                 </div>
                 <div id="accordion7-4" class="collapse">
                     <div class="card-body">
-
-
-
-
 
                         <div class="row card_">
                             <div class="_col-md-4">
@@ -192,9 +179,6 @@
                             </div><!--end .col -->
                         </div>
 
-
-
-
                     </div>
                 </div>
             </div><!--end .panel -->
@@ -203,17 +187,7 @@
             <!-- end Оплатить вступительный взнос -->
 
 
-
-
-
-
-
-
-
-
-
             <div class="row" style="padding-top: 40px;">
-
 
                 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
                 <script type="text/javascript">
@@ -247,8 +221,6 @@
                     }
                 </script>
 
-
-
                 <!-- BEGIN OFFCANVAS LEFT -->
                 <div class="offcanvas">
 
@@ -262,21 +234,6 @@
                                 </a>
                             </div>
                         </div>
-
-
-
-
-                        {#['Месяц', 'IPO' , "Валютый робот", "Фондовый","Хэдж-фонд" ],#}
-
-                        {#{% for profit in profitAll %}#}
-                            {#[#}
-                            {#'{{ profit.getCreatedAt().date|date("m/d/Y")  }}',#}
-                            {#{{profit.getBalanceIpo()?profit.getBalanceIpo():0}},#}
-                            {#{{ profit.getBalanceConservative()? profit.getBalanceConservative():0 }},#}
-                            {#{{ profit.getBalanceFive()?profit.getBalanceFive():0 }},#}
-                            {#{{ profit.getBalance04()?profit.getBalance04():0}},#}
-                            {#],#}
-                        {#{% endfor %}#}
 
                                         <div class="offcanvas-body">
                             {#<p>#}
@@ -295,26 +252,28 @@
                             {#</ul>#}
 
 
-
-
-
-                            <ul class="list-divided">
-
-                            {% for profit in profitAll %}
-
-
-                                <li>{{ profit.getIsprofit()  }}</li>
-                                <li>{{ profit.getBalanceIpo()  }}</li>
-                                <li>{{ profit.getBalanceConservative() }}</li>
-                                <li>{{ profit.getBalance04() }}</li>
-                                <li>{{ profit.getBalanceFive() }}</li>
-
-                                getCurrentAccount
-
-                            {% endfor %}
-                            </ul>
-
-
+                                            <table id="datatable1" class="table table-striped table-hover">
+                                                <thead>
+                                                <tr>
+                                                    <th>Месяц</th>
+                                                    <th>IPO</th>
+                                                    <th>Валютый робот</th>
+                                                    <th>Фондовый</th>
+                                                    <th>Хэдж-фонд</th>
+                                                </tr>
+                                                </thead>
+                                                <tbody>
+                                                {% for profit in profitAll %}
+                                                    <tr class="gradeX">
+                                                        <td>{{ profit.getCreatedAt().date|date("m/d/Y")  }}</td>
+                                                        <td>{{profit.getBalanceIpo()?profit.getBalanceIpo():0}}</td>
+                                                        <td>{{ profit.getBalanceConservative()? profit.getBalanceConservative():0 }}</td>
+                                                        <td>{{ profit.getBalanceFive()?profit.getBalanceFive():0 }}</td>
+                                                        <td>{{ profit.getBalance04()?profit.getBalance04():0}}</td>
+                                                    </tr>
+                                                {% endfor %}
+                                                </tbody>
+                                            </table>
                         </div>
                     </div>
                     <!-- END OFFCANVAS DEMO LEFT -->
@@ -322,27 +281,18 @@
                 </div><!--end .offcanvas-->
                 <!-- END OFFCANVAS LEFT -->
 
-
-
                 <div class="alert alert-callout alert-info">
                     Все средства по всем портфелям в обороте и свободные средства c учетом прибыли: <b> {{ balanceAll   }} </b> USD
                     <br />
                     <span class="badge style-danger"  style="  padding-bottom: 5px; background-color: #335f29;">   <i class="md md-account-balance-wallet"></i>   Доход за все время   {{ profitSummAll }}   USD </span>
                     <br />
 
-
-                    {#<a class="btn btn-raised ink-reaction btn-default-dark" href="#offcanvas-demo-left" data-toggle="offcanvas">#}
-                        {#<i class="md md-arrow-back"></i>#}
-                        {#Open left off-canvas#}
-                    {#</a>#}
+                    <a style="background-color: #a2a2ad;" class=" badge style-danger ink-reaction btn-default-dark" href="#offcanvas-demo-left" data-toggle="offcanvas">
+                        <i class="md md-account-balance"></i>  Подробней тут
+                    </a>
 
                     {#<div id="chart_div" style="width: 900px; height: 500px;"></div>#}
                 </div>
-
-
-
-
-
 
                 <div class="_col-md-3">
                     <div class="card ">
@@ -373,33 +323,19 @@
                             <div class="_col-md-4">
                                 <div class="card-head">
                                     <header> Инвестированые средства  </header>
-
-
                                 </div>
-
-
-
-
                                 <div class="card-body height-8">
-
-
 
                                     Роботизированная торговля   (валютый робот)  <strong  style="text-align: right;" id="balance-Conservative">{{ report.conservative }}</strong> USD
 
-
-
                                     {#<span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>#}
-
                                     <span class="pull-right text-success text-sm">
-
                                         <a href="/admin/statistics/1/" style="top: 11px;">
                                             <span class="badge style-danger pull-right" style="background-color: #49a99e;">
                                                  Статистика <i class="md md-trending-up"></i>
                                             </span>
                                         </a>
-
                                     </span>
-
 
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-primary-dark" style="width:0%"></div>
@@ -408,19 +344,12 @@
 
 
                                     <span class="pull-right text-success text-sm">
-
                                         <a href="/admin/statistics/04" style="top: 11px;">
                                             <span class="badge style-danger pull-right" style="background-color: #49a99e;">
                                                  Статистика <i class="md md-trending-up"></i>
                                             </span>
                                         </a>
-
                                     </span>
-
-
-
-
-
 
                                     {#<span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>#}
                                     <div class="progress progress-hairline">
@@ -439,14 +368,7 @@
 
                                     </span>
                                     {#<span class="pull-right text-danger text-sm">0% <i class="md md-trending-down"></i></span>#}
-
-
-
                                     {#<span class="pull-right text-success text-sm"> подробней </span>#}
-
-
-
-
 
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-primary-dark" style="width:0%"></div>
@@ -465,23 +387,6 @@
                                     </span>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                                     {#Хэдж-фонд <strong id="balance-IPO">{{ report.ipo }}</strong> USD#}
 
 
@@ -495,25 +400,9 @@
 
                                     {#</span>#}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-danger" style="width:0%"></div>
                                     </div>
-
 
                                     {#32,301 Баланс#}
                                     {#<span class="pull-right text-success text-sm">0,18% <i class="md md-trending-up"></i></span>#}
@@ -523,13 +412,6 @@
 
                                     Свободные средства
                                      {#<strong id="available_funds">{{ report.available_funds  }}</strong>  USD#}
-
-
-
-
-
-
-
 
                                         <div class="btn-group dropup  ">
                                             <button type="button" class="btn ink-reaction btn-primary">  <strong id="available_funds">{{ report.available_funds  }}</strong>  USD  </button>
@@ -543,16 +425,6 @@
                                                 <li> <a href="#USDT"> {{ report.available_funds / exchangeRates.USDT_USD}}  USDT</a></li>
                                             </ul>
                                         </div><!--end .btn-group -->
-
-
-
-
-
-
-
-
-
-
 
 
                                     {#<span class="pull-right text-success text-sm">#}
@@ -569,12 +441,6 @@
                                     {#</span>#}
 
 
-
-
-
-
-
-
                                     {#https://api.exmo.com/v1/trades/?pair=USD_RUB,USD_BTC,USD_LTC,USD_ETH,USD_NEO#}
 
 
@@ -589,13 +455,6 @@
                 </div><!--end .col -->
                 <!-- END SITE ACTIVITY -->
 
-
-
-
-
-
-
-
                 {#<div class="col-md-3">#}
                     {#<div class="card ">#}
                         {#<div class="row">#}
@@ -608,14 +467,6 @@
                         {#<div id="chart_div" style="width: 100%; height: 100%;"></div></center>#}
                     {#</div>#}
                 {#</div>#}
-
-
-
-
-
-
-
-
 
 
                 {#<!-- BEGIN REGISTRATION HISTORY -->#}
@@ -657,48 +508,9 @@
                 {#<!-- END REGISTRATION HISTORY -->#}
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             </div><!--end .row -->
         </div><!--end .section-body -->
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     <!-- Modal -->
@@ -882,13 +694,6 @@
     </div>
 
 
-
-
-
-
-
-
-
     <!--  begin  PortfolioOneModal -->
     <!-- Modal -->
     <div class="modal fade" id="PortfolioOneModal" tabindex="-1" role="dialog" aria-labelledby="PortfolioOneModalLabel" aria-hidden="true">
@@ -915,9 +720,6 @@
                                             <label>Фондовый</label>
                                         </div>
                                     {#</form>#}
-
-
-
 
                                     <table class="table table-striped">
                                         <thead>
@@ -997,13 +799,6 @@
     <!--  end PortfolioOneModal -->
 
 
-
-
-
-
-
-
-
     {#<ul class="timeline">#}
         {#<li class="timeline-inverted">#}
             {#<div class="timeline-circ"></div>#}
@@ -1027,7 +822,5 @@
         {#</li>#}
         {#...#}
     {#</ul>#}
-
-
 
 {% endblock %}
