--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -376,6 +376,15 @@
                                     Фондовый <strong id="balance-five">{{ report.five }}</strong> USD
 
 
+
+                                    <span class="pull-right text-success text-sm">
+                                        <a href="/admin/statistics/5" style="top: 11px;">
+                                            <span class="badge style-danger pull-right" style="background-color: #49a99e;">
+                                                 Статистика <i class="md md-trending-up"></i>
+                                            </span>
+                                        </a>
+                                    </span>
+
                                     <span class="pull-right text-success text-sm">
 
                                         {#<a href="/admin/statistics/3/" style="top: 11px;">#}
