--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -239,7 +239,7 @@
                 <div class="col-lg-3 p-3">
                     <div class="wow bounceInUp" data-wow-delay="0.8s">
                         <div class="team boxed-grey" style=" height: 373px;">
-                            <div class="inner"  onclick="location.href='/#contact'"  style="cursor: pointer">
+                            <div class="inner"  onclick="location.href='/services/hedge-fund'"  style="cursor: pointer">
                                 <h5>Портфель 4 <br /> «Хэдж-фонд»</h5><br />
                                 {#<p class="subtitle">jQuery Ninja</p>#}
                                 <div class="avatar">
