--- a/templates/services/roboticTrading.html.twig
+++ b/templates/services/roboticTrading.html.twig
@@ -175,7 +175,7 @@
                                                     <tr>
                                                         <th scope="row">3</th>
                                                         <td>Минимальная сумма входа</td>
-                                                        <td>100$</td>
+                                                        <td>1000$</td>
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">4</th>
@@ -224,11 +224,11 @@
 
 
                                                 <p>ВАРИАНТ №2 На нашем счете, не устанавливая робота и не разбираясь с брокерами, инструкциями по установке, подключением VPS сервера и т.д. Все за вас сделаем мы. Вам остается только наблюдать статистику и получать профит. При этом Вы оплачиваете комиссию от 10 до 30 % от суммы чистой прибыли (в зависимости от суммы депозита) на реквизиты Global Big Bell. Вывод моментально на кошелек Payeer или другими имеющимися способами, в том числе криптовалютой.</p>
-                                                <p>ПРОИНВЕСТИРОВАТЬ в ВАРИАНТ №2 «Роботизированная Торговля»</p>
+                                                <p><strong>ПРОИНВЕСТИРОВАТЬ в ВАРИАНТ №2 «Роботизированная Торговля»</strong></p>
 
                                                 <p>ВАРИАНТ №3 Купив робота по нашей партнерской программе, при этом Вы можете получать прибыль от партнеров как внутри нашего Клуба по нашей реферальной программе
                                                     <a style="color: #0a6ebd" target="_blank" href="https://globalbigbell.com/docs/referral_program.docx">(Открыть)</a>. Также и внутри проектов самих роботов, в некоторых из них имеется очень интересный маркетинг для тех, кто работает со своей командой.</p>
-                                                <p>ПРОИНВЕСТИРОВАТЬ в ВАРИАНТ №3 «Роботизированная Торговля»</p>
+                                                <p><strong>ПРОИНВЕСТИРОВАТЬ в ВАРИАНТ №3 «Роботизированная Торговля»</strong></p>
 
 
                                                 <p>Как зарегистрироваться в Портфель №2</p>
