--- a/templates/services/hedgeFund.html.twig
+++ b/templates/services/hedgeFund.html.twig
@@ -13,7 +13,7 @@
                         <div class="row style-primary">
                             <div class="col-sm-9">
                                 <div class="card-body style-default-dark">
-                                    <h2> Hedge Fund </h2>
+                                    <h2>  Портфель № 4 «Хэдж-фонд» </h2>
                                     <div class="text-default-light">
                                         {#Posted by <a href="#">Admin</a>#} <br />
                                     </div>
@@ -50,11 +50,187 @@
                                     </div>
                                     <div class="card-body">
 
-                                        <button onclick="location.href='/#contact'" style="color: #f2f3f3;
-                                    background-color: #4caf50;
-                                    border-color: #4caf50;" type="button" class=" btn btn-block ink-reaction btn-default-bright" >
-                                            По запросу
-                                        </button>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                        <p><b>Портфель № 4 «Хэдж-фонд»</b></p>
+                                        <p>Портфель № 4 «Хэдж-фонд» - это лучшая наша разработка в сфере инвестирования и финансов, это по-настоящему сбалансированный портфель активов, который позволяет инвестировать наиболее эффективно, максимально хэджируя свои риски. Ведь диверсификация портфеля – это один из базовых принципов подбора инвестиционных инструментов.</p>
+                                        <p>Портфель № 4 «Хэдж-фонд» - это по своей сути аналог американского хэдж-фонда. Ведь в Америке это наиболее эффективный метод приумножения своих инвестиций, который по сей день применяется и по истине доказал свою эффективность. Американский рынок является развитым и многие тенденции берутся именно оттуда.</p>
+                                        <p>Это структурный продукт, благодаря чему удается достигать оптимального соотношения риск/прибыль и выходить на новые горизонты.</p>
+                                        <p>Наши трейдеры и специалисты по финансовым инструментам умеют сконструировать Ваш портфель так, что вы будете приятно удивлены доходностью. При этом, мы в основном используем только ликвидные инструменты как Российской Фондовой биржи, американского рынка                         и Лондонской биржи. Здесь применяются следующие инструменты: IPO (первичные акции американского фондового рынка), фьючерсы (ручной трейдинг-Россия), опционы, валютные пары (ручной трейдинг), роботизированная торговля (валютный робот) и другие инструменты.</p>
+                                        <p>В нашей команде задействованы настоящие профессионалы своего дела, имеющие многолетний опыт (от 10 лет) управления крупными активами                (от 1 млн. долларов).</p>
+                                        <p>В <b>Портфеле № 4 </b>мы используем собственную 3-х уровневую систему инвестирования, аналогов которой не существует. Ниже приведена примерная схема работы активов в Портфеле № 4 (точная схема является уникальной разработкой компании и раскрытию не подлежит).</p>
+
+
+                                        <div class="alert alert-callout alert-success" role="alert">
+
+                                        <p>1. IPO-100%</p>
+
+                                        <p>2. Фьючерсы-70-50%</p>
+
+                                        <p>3. Опционы волатильности-10%</p>
+
+                                        <p>4. Валютные операции (ручной трейдинг)-25%</p>
+                                        <p>5. Роботизированная торговля -5%</p>
+
+                                        </div>
+
+
+
+
+                                        <p><b>Условия инвестирования в Портфель № 4 «Хэдж-фонд»</b></p>
+
+                                        <strong>
+                                        <p>1. Вход на рынок от 100 $.</p>
+                                        <p>2. Деньги поступают в общий пул инвесторов.</p>
+                                        <p>3. Отсечка с 1 числа месяца.</p>
+                                        <p>4. Подведение итогов – с 1-5 число следующего месяца за предыдущий месяц.</p>
+                                        <p>5. Вывод средств – по запросу на личный кошелек сразу в течении 3-5 дней в зависимости от ситуации в позициях на Рынке (для прибыльного выхода из позиций).</p>
+                                        <p>6. Ввод средств – через Платежную систему на сайте www.globalbigbell.com.</p>
+                                        <p>7. Оплата DUTY (6% от суммы инвестирования, но не менее 75$-взимается один раз за управление активами) – не позднее 1 месяца после ввода средств в ПУЛ.</p>
+                                        <p>8. Рекомендуемый период инвестирования – от 3-х месяцев и более.</p>
+                                        <p>Действуют специальные VIP-условия для клиентов от 50 000 $,</p>
+                                        <p>- отдельный подход в формировании стратегии по Портфелю,</p>
+                                        <p>- возможность управления на счетах VIP-клиентов,</p>
+                                        <p>- персональный управляющий,</p>
+                                        <p>- круглосуточная поддержка и др.</p>
+                                        </strong>
+
+
+                                        <p><b>Основные характеристики</b></p>
+
+
+
+
+                                        <table class="table table-bordered table-dark">
+                                            <thead>
+                                            <tr>
+                                                <th scope="col">#</th>
+                                                <th scope="col">Основные характеристики портфеля </th>
+                                                <th scope="col">Показатели</th>
+
+                                            </tr>
+                                            </thead>
+                                            <tbody>
+                                            <tr>
+                                                <th scope="row">1</th>
+                                                <td>Доходность</td>
+                                                <td>до 10-25% - месяц</td>
+
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">2</th>
+                                                <td>Риск</td>
+                                                <td>до 15-25 % от депо</td>
+
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">3</th>
+                                                <td>Минимальная сумма входа</td>
+                                                <td>100$</td>
+
+                                            </tr>
+
+
+                                            <tr>
+                                                <th scope="row">4</th>
+                                                <td>Частота выплат</td>
+                                                <td>сразу</td>
+
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">5</th>
+                                                <td>Минимальный срок работы портфеля</td>
+                                                <td>любой </td>
+
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">6</th>
+                                                <td>Вывод тела депозита</td>
+                                                <td>да</td>
+
+                                            </tr>
+                                            <tr>
+                                                <th scope="row">7</th>
+                                                <td>Стратегия инвестирования</td>
+                                                <td>среднесрочная и долгосрочная</td>
+
+                                            </tr>
+
+                                            </tbody>
+                                        </table>
+
+
+
+                                        {#Основные характеристики Портфеля №4#}
+    {#Показатели#}
+    {#Доходность#}
+    {#до 10-25% - месяц#}
+    {#Риск#}
+    {#до 15-25 % от депо#}
+    {#Минимальная сумма входа#}
+    {#100$#}
+    {#Частота выплат#}
+    {#сразу#}
+    {#Минимальный срок работы портфеля#}
+    {#любой#}
+    {#Вывод тела депозита#}
+    {#да#}
+    {#Стратегия инвестирования#}
+
+
+
+
+                                        <div class="alert alert-callout alert-success" role="alert">
+
+
+                                            <p>Cреднесрочная и долгосрочная</p>
+                                        <p>Проект GBB оставляет за собой право удержания комиссии согласно договору и приложению к нему и распределения прибыли в  следующих пропорциях:</p>
+                                        <p>1. При сумме депозита до 50 000$ - 30/70%, где 70%-полагается инвестору;</p>
+                                        <p>2. При сумме депозита от 50 000$ до 100 000$ - 20/80%, где 80%-полагается инвестору;</p>
+                                        <p>3. При сумме депозита от 100 000$ до 500 000$ - 15/85%, где 85%-полагается инвестору.</p>
+                                        <p>4. При сумме депозита от 500 000$ - 10/90%, где 90%-полагается инвестору.</p>
+
+
+
+
+                                        </div>
+
+
+
+
+
+
+
+{#<br />#}
+                                        {#<button onclick="location.href='/#contact'" style="color: #f2f3f3;#}
+                                    {#background-color: #4caf50;#}
+                                    {#border-color: #4caf50;" type="button" class=" btn btn-block ink-reaction btn-default-bright" >#}
+                                            {#Остались вопросы#}
+                                        {#</button>#}
+
+
+
+
+
+
+
+
+
 
 
 
@@ -182,12 +358,24 @@
 
                                     <h3 class="text-light">Основные характеристики </h3>
                                     <ul class="nav nav-pills nav-stacked nav-transparent">
-                                        {#<li><a href="#"><span class="badge pull-right"> до 100% - годовых </span>Доходность</a></li>#}
+                                        <li><a href="#"><span class="badge pull-right"> до 10-25% - месяц  </span>Доходность</a></li>
+
+                                        <li><a href="#"><span class="badge pull-right"> 100$ </span>Cумма входа</a></li>
+
+                                        <li><a href="#"><span class="badge pull-right"> до 15-25 % от депо  </span>Риск</a></li>
+
+
                                         {#<li><a href="/docs/attachments.zip"><span class="badge pull-right"> zip </span>Фото</a></li>#}
                                         {#<li><a href="#"><span class="badge pull-right">12</span>Video</a></li>#}
                                         {#<li><a href="#"><span class="badge pull-right">5</span>Music</a></li>#}
                                         {#<li><a href="#"><span class="badge pull-right">28</span>Uncategorized</a></li>#}
                                     </ul>
+
+
+
+
+
+
 
 
 
